{{$NEXT}}

1.001     2019-05-30 11:13:04 EDT
  - Fix formatting of Future::Role::Promisify synopsis (haarg, #4)

1.000     2019-04-14 19:56:55 EDT
  - Added a new module Future::Role::Promisify, which is composed by default by
    Future::Mojo to provide a promisify method that chains a Mojo::Promise.

0.004     2017-11-03 12:20:54 EDT
  - Added new_timeout constructor for a future that fails after a delay

0.003     2015-11-28 15:34:30 EST
  - $loop parameter to constructors is now optional

0.002     2015-09-30 13:05:41 EDT
  - await() will now throw an exception if the event loop is already running,
    to avoid event loop recursion in a get() or failure()

0.001     2015-09-28 21:45:38 EDT
  - First release