@@ -1,5 +1,6 @@
 language: perl
 perl:
+  - "5.30"
   - "5.28"
   - "5.26"
   - "5.24"
@@ -7,7 +8,4 @@ perl:
   - "5.20"
   - "5.18"
   - "5.16"
-  - "5.14"
-  - "5.12"
-  - "5.10"
 install: cpanm --quiet --installdeps --notest --with-develop .
