@@ -1,12 +1,0 @@
-requires 'perl' => '5.010001';
-requires 'Carp';
-requires 'Future' => '0.36';
-requires 'Mojolicious' => '7.54';
-requires 'parent';
-requires 'Role::Tiny' => '2.000002';
-requires 'Scalar::Util';
-test_requires 'Test::Identity';
-test_requires 'Test::More' => '0.94';
-test_requires 'Test::Needs';
-author_requires 'IO::Async::Loop' => '0.56';
-author_requires 'IO::Async::Loop::Mojo' => '0.04';
