@@ -5,9 +5,9 @@ copyright_holder = Dan Book
 copyright_year   = 2015
 
 [@Author::DBOOK]
-:version = 0.032
+:version = v1.0.3
 installer = ModuleBuildTiny::Fallback
 pod_tests = 1
-irc = irc://irc.perl.org/#mojo
+irc = ircs://irc.libera.chat/#mojo
 Test::ReportPrereqs.include[0] = IO::Async::Loop
 Test::ReportPrereqs.include[1] = IO::Async::Loop::Mojo
