@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Update IRC metadata to libera.chat
 
 1.001     2019-05-30 11:13:04 EDT
   - Fix formatting of Future::Role::Promisify synopsis (haarg, #4)
